@@ -115,6 +115,7 @@ Changelog for 1.3.40
 * Fixed #1133 (FX rate changed after selecting part/service) (Pongracz I)
 * Fixed #1078 (Don't populate all empty projects automatically) (Pongracz I)
 * Fixed #1139 (Vendor can show up as default customer in sales order, confusing...) (Pongracz I)
+* Fixed type mismatch between invoice.qty and invoice.allocated (Chris T)
 
 Chris T is Chris Travers
 Pongracz I is Pongracz Istvan
